Fix gaps between "Something to X"s #188

--- a/scss/frontpage.scss
+++ b/scss/frontpage.scss
@@ -94,12 +94,25 @@
         cursor: pointer;
         border: 1px solid $gray;
         margin: 0;
-        margin-right: 10px;
-        &:last-of-type {
-            margin-right: 0;
+        //goofy explicit margins here since IE/Edge don't support grid-column-gap
+        @media screen and (min-width: 768px) {
+            &:nth-child(1) {
+                margin-right: 9px;
+            }
+            &:nth-child(2) {
+                margin-left: 3px;
+                margin-right: 6px;
+            }
+            &:nth-child(3) {
+                margin-left: 6px;
+                margin-right: 3px;
+            }
+            &:nth-child(4) {
+                margin-left: 9px;
+            }
         }
-        @media screen and (max-width: 768px) {
-            margin-bottom: 15px;
+        @media screen and (max-width: 767px) {
+            margin: 0 5px 15px 5px;
         }
         .field--name-field-something-to-type {
             text-align: center;
